[package]
name = "raylib_interactive"
version = "0.1.5"
authors = ["James Yacoube <jamesyacoube@yahoo.com>"]
edition = "2021"
description = "An interactive library for Raylib"
license = "MIT"
homepage = "https://github.com/OrtheSnowJames/rayinteract"
readme = "README.md"

[dependencies]
raylib = "5.0" 

[lib]
name = "raylib_interactive"
path = "src/lib.rs"
crate-type = ["lib"]
