[package]
name = "raylib_interactive"
version = "0.1.6"
authors = ["James Yacoube <jamesyacoube@yahoo.com>"]
edition = "2021"
description = "An interactive library for Raylib"
license = "MIT"
homepage = "https://github.com/OrtheSnowJames/rayinteract"
readme = "README.md"

[dependencies]
arboard = "3.6.0"
raylib = "5.0" 
regex = "1.11.1"

[lib]
name = "raylib_interactive"
path = "src/lib.rs"
crate-type = ["lib"]
